--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
+                        <h1 class="text-white font-weight-bold">Frontend Developer</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+                        <p class="text-white-75 mb-5">My name is Chukwuemeka Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
+                             I’m always eager to learn new technologies and tools to enhance my skills and deliver high-quality work.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
