--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">My name is Chukwuemeka Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
+                        <p class="text-white-75 mb-5 intro">My name is Chukwuemeka Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
                              I’m always eager to learn new technologies and tools to enhance my skills and deliver high-quality work.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
