--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <h3 class="h4 mb-2">Web development</h3>
+                            <p class="text-muted mb-0">develop your website using the latest technologies and frameworks such as HTML, CSS, JavaScript, React, and Bootstrap.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <h3 class="h4 mb-2">Web maintenance</h3>
+                            <p class="text-muted mb-0">maintain and update your website regularly to ensure its optimal performance and functionality</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
