--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5 intro">My name is Chukwuemeka Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
+                        <p class="text-white-75 mb-5 intro">My name is Chukwuemeka Emmauel Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
                              I’m always eager to learn new technologies and tools to enhance my skills and deliver high-quality work.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
@@ -55,9 +55,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">I've got what you need!</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="text-white-75 mb-4">As a front-end developer and data entry specialist, I possess a unique combination of technical and organizational skills. With experience in creating user-friendly interfaces using HTML, CSS, Javascript, Bootstrap and React, I have a keen eye for detail when it comes to design. My ability to work efficiently and accurately makes me a valuable asset to any team.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
@@ -164,8 +164,8 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <h2 class="mb-4">Visit My Github Repo</h2>
+                <a class="btn btn-light btn-xl" href="https://github.com/Menma00">Click here</a>
             </div>
         </section>
         <!-- Contact-->
