--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <h3 class="h4 mb-2">Clean Code</h3>
+                            <p class="text-muted mb-0">Websites are written in elegant, efficient, readable code</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -88,13 +88,6 @@
                             <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Web maintenance</h3>
                             <p class="text-muted mb-0">maintain and update your website regularly to ensure its optimal performance and functionality</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
                         </div>
                     </div>
                 </div>
