--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5 intro">My name is Chukwuemeka Emmauel Menma. I’m a skilled frontend engineer with 6 years of experience as a freelancer. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
+                        <p class="text-white-75 mb-5 intro">My name is Chukwuemeka Emmauel Menma. I’m a skilled front-end engineer with 6 years of freelancing experience. I have worked on various projects involving web development, user interface design, and responsive web design. I have expertise in HTML, CSS, JavaScript, React, and Bootstrap. I’m passionate about creating beautiful and functional websites that meet the needs and expectations of the clients.
                              I’m always eager to learn new technologies and tools to enhance my skills and deliver high-quality work.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">I've got what you need!</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">As a front-end developer and data entry specialist, I possess a unique combination of technical and organizational skills. With experience in creating user-friendly interfaces using HTML, CSS, Javascript, Bootstrap and React, I have a keen eye for detail when it comes to design. My ability to work efficiently and accurately makes me a valuable asset to any team.</p>
+                        <p class="text-white-75 mb-4">As a front-end developer and data entry specialist, I possess unique technical and organizational skills. With experience in creating user-friendly interfaces using HTML, CSS, Javascript, Bootstrap and React, I have a keen eye for detail when it comes to design. My ability to work efficiently and accurately makes me a valuable asset to any team.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Web development</h3>
-                            <p class="text-muted mb-0">develop your website using the latest technologies and frameworks such as HTML, CSS, JavaScript, React, and Bootstrap.</p>
+                            <p class="text-muted mb-0">develop your website using the latest technologies and frameworks such as HTML, CSS, JavaScript, React, and Bootstrap & More.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
